# vendel

./: .dockerignore  .env.example  .gitignore  ANDROID_PLAN.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  README.es.md  README.md  SECURITY.md  deployment.md  development.md  docker-compose.litestream.yml  docker-compose.yml  entrypoint.sh  litestream.yml  release-notes.md
.claude/agents/: golang-pro.md
.github/: dependabot.yml  labeler.yml
.github/tickets/: roadmap.md
.github/workflows/: deploy-production.yml  deploy-staging.yml  labeler.yml  publish-docker.yml  publish-sdk-go.yml  publish-sdk-javascript.yml  publish-sdk-python.yml  release-modem-agent.yml  release-server.yml  release-smpp-agent.yml  test.yml
agent-core/: client.go  go.mod  sse.go  types.go
backend/: .goreleaser.yml  Dockerfile  config.go  go.mod  go.sum  main.go  requirements.txt
backend/commands/: update.go
backend/cronjobs/: jobs.go
docs/: deployment.md  development.md
frontend/: README.md  biome.json  design-system.html  index.html  package-lock.json  package.json  tsconfig.build.json  vite.config.ts
modem-agent/: .dockerignore  .env.example  .goreleaser.yml  Dockerfile  client.go  config.go  go.mod  go.sum  main.go  modems.example.yaml  profiles.go
scripts/: run-development.sh
sdks/python/: pyproject.toml
sdks/python/src/ender_sdk/: __init__.py  client.py  exceptions.py  webhook.py
smpp-agent/: .dockerignore  .env.example  .gitignore  .goreleaser.yml  Dockerfile  client.go  config.go  configs.example.yaml  go.mod  go.sum  main.go  smpp.go
(+270 files in other folders)
